<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Audify</string>
    <string name="login_greeting">Hola, inicia sesi\u00f3n</string>
    <string name="email_placeholder">Correo</string>
    <string name="password_placeholder">Contrase\u00f1a</string>
    <string name="forgot_password">\u00bfOlvidaste tu contrase\u00f1a?</string>
    <string name="btn_sign_in">INICIAR SESI\u00d3N</string>
    <string name="no_account_text">\u00bfNo tienes cuenta?</string>
    <string name="register_link">Reg\u00edstrate</string>
    <string name="register_title">Crea tu cuenta</string>
    <string name="full_name_placeholder">Nombre completo</string>
    <string name="email_or_phone_placeholder">Correo electr\u00f3nico o tel\u00e9fono</string>
    <string name="confirm_password_placeholder">Confirmar contrase\u00f1a</string>
    <string name="btn_register">REGISTRARME</string>
    <string name="has_account_text">\u00bfYa tienes cuenta?</string>
    <string name="login_link">Inicia sesi\u00f3n</string>
    <string name="login_skip">Omitir inicio de sesi\u00f3n</string>
    <string name="home_greeting">Hola</string>
    <string name="home_welcome">Bienvenido</string>
    <string name="home_search_hint">Buscar podcasts\u2026</string>
    <string name="home_populares">Populares</string>
    <string name="menu_desc">Men\u00fa</string>
    <string name="banner_desc">Banner</string>
    <string name="filter_desc">Filtrar</string>
    <string name="notification_desc">Notificaci\u00f3n</string>
    <string name="profile_title">Mi Perfil</string>
    <string name="profile_user_name">Usuario Audify</string>
    <string name="profile_user_email">usuario@audify.com</string>
    <string name="profile_name_label">Nombre</string>
    <string name="profile_name_hint">Escribe tu nombre</string>
    <string name="profile_new_password">Nueva Contrase\u00f1a</string>
    <string name="profile_password_hint">M\u00ednimo 6 caracteres</string>
    <string name="profile_confirm_password">Confirmar Contrase\u00f1a</string>
    <string name="profile_confirm_hint">Repite la contrase\u00f1a</string>
    <string name="profile_save">Guardar Cambios</string>
    <string name="profile_logout">Cerrar Sesi\u00f3n</string>
    <string name="back_desc">Regresar</string>
    <string name="bottom_inicio">Inicio</string>
    <string name="bottom_podcasts">Mis podcasts</string>
    <string name="bottom_upload">Subir podcast</string>
    <string name="bottom_profile">Mi perfil</string>
    <!-- Drawer -->
    <string name="drawer_user_name">Usuario Audify</string>
    <string name="drawer_user_email">usuario@audify.com</string>
    <string name="drawer_inicio">Inicio</string>
    <string name="drawer_favoritos">Mis favoritos</string>
    <string name="drawer_listas">Mis listas</string>
    <string name="drawer_borradores">Borradores</string>
    <string name="drawer_cerrar_sesion">Cerrar sesi\u00f3n</string>

    <!-- Podcasts -->
    <string name="podcasts_creator_subtitle">Creadora de contenido</string>
    <string name="podcasts_count_label">Podcasts</string>
    <string name="podcasts_categories_label">Categor\u00edas</string>
    <string name="podcasts_categories_title">Categor\u00edas</string>

    <!-- Lists -->
    <string name="lists_total_label">Listas creadas</string>
    <string name="lists_create">+ Crear lista</string>
    <string name="lists_section">Mis listas</string>
    <string name="lists_all_podcasts">Todos los podcasts</string>

    <!-- Favorites -->
    <string name="fav_count_label">Podcasts favoritos</string>
    <string name="fav_section_title">Mis favoritos</string>
    <string name="fav_search_hint">Buscar en favoritos\u2026</string>
    <string name="detail_title">Reproduciendo</string>
    <string name="detail_description_label">Descripci\u00f3n</string>

    <string name="notif_coming_soon">Pr\u00f3ximamente</string>
    <string name="filter_title">Filtrar</string>
    <string name="thumbnail_desc">Thumbnail</string>

    <!-- Upload -->
    <string name="upload_title">Subir podcast</string>
    <string name="upload_cover_label">Portada</string>
    <string name="upload_cover_hint">Toca para agregar una imagen de portada</string>
    <string name="upload_title_hint">T\u00edtulo del podcast</string>
    <string name="upload_desc_hint">Descripci\u00f3n</string>
    <string name="upload_category_label">Categor\u00eda</string>
    <string name="upload_select_category">Selecciona una categor\u00eda</string>
    <string name="upload_audio_label">Audio</string>
    <string name="upload_select_file">Seleccionar archivo</string>
    <string name="upload_record">Grabar audio</string>
    <string name="upload_file_selected">Archivo seleccionado: %s</string>
    <string name="upload_recording">Grabando\u2026</string>
    <string name="upload_stop">Detener</string>
    <string name="upload_publish">Publicar podcast</string>
    <string name="upload_note">Los archivos de audio se revisar\u00e1n para verificar que cumplan con fines acad\u00e9micos antes de su publicaci\u00f3n.</string>
    <string name="upload_dialog_title">Podcast enviado</string>
    <string name="upload_dialog_message">Tu podcast ha sido recibido. El audio estar\u00e1 en revisi\u00f3n para comprobar que cumple con fines acad\u00e9micos.\n\nMientras tanto, el podcast ser\u00e1 visible en tu perfil pero el audio no podr\u00e1 reproducirse hasta que sea aprobado por un administrador.</string>
    <string name="upload_dialog_ok">Entendido</string>
    <string name="upload_category_dialog_title">Seleccionar categor\u00eda</string>
    <string name="upload_audio_required">Selecciona o graba un audio antes de publicar</string>
    <string name="upload_title_required">Escribe un t\u00edtulo para el podcast</string>
    <string name="upload_desc_required">Escribe una descripci\u00f3n</string>
    <string name="upload_permission_denied">Permiso denegado. Revisa la configuraci\u00f3n de la app.</string>
    <string name="upload_recording_error">Error al iniciar la grabaci\u00f3n</string>
<<<<<<< HEAD
=======
    <string name="upload_save_draft">Guardar como borrador</string>
    <string name="upload_success_message">Tu podcast ha sido enviado correctamente.\n\nestar\u00e1 en revisi\u00f3n para comprobar que cumple con fines acad\u00e9micos. Mientras tanto, el podcast ser\u00e1 visible en tu perfil pero el audio no podr\u00e1 reproducirse hasta que sea aprobado por un administrador.</string>
    <string name="upload_draft_saved">Borrador guardado</string>
    <string name="upload_select_image_perm">Se necesita acceso a la galer\u00eda para seleccionar una imagen.</string>
    <string name="upload_select_audio_perm">Se necesita acceso a los archivos para seleccionar audio.</string>
>>>>>>> 1b10f94c7f0acd7d0da8896266b4e4f50e09e020

    <!-- Register Dialog -->
    <string name="register_dialog_title">T\u00e9rminos y condiciones</string>
    <string name="register_dialog_message">Al registrarte, aceptas los siguientes t\u00e9rminos:\n\n\u2022 El correo electr\u00f3nico que proporcionas debe ser v\u00e1lido y real, ya que a trav\u00e9s de \u00e9l se enviar\u00e1n notificaciones importantes sobre tu cuenta.\n\n\u2022 Si el correo electr\u00f3nico es falso, inv\u00e1lido o no puedes acceder a \u00e9l, no se aceptar\u00e1n reclamos ni se podr\u00e1n recuperar los datos de tu cuenta.\n\n\u2022 Te comprometes a usar la plataforma de manera responsable y respetuosa.\n\n\u2022 La contrase\u00f1a elegida es de tu responsabilidad. No la compartas con terceros.</string>
    <string name="register_dialog_accept">Aceptar y registrarme</string>
    <string name="register_dialog_cancel">Cancelar</string>

    <!-- Profile -->
    <string name="profile_username_label">Nombre de usuario</string>
    <string name="profile_username_hint">Tu nombre de usuario</string>
    <string name="profile_username_required">El nombre de usuario no puede estar vac\u00edo</string>
    <string name="profile_username_min">El nombre de usuario debe tener al menos 3 caracteres</string>
    <string name="profile_username_invalid">El nombre de usuario solo puede contener letras, n\u00fameros, puntos y guiones bajos</string>
    <string name="profile_username_taken">Ese nombre de usuario ya est\u00e1 en uso</string>
    <string name="profile_saved">Cambios guardados</string>
    <string name="profile_not_found">Usuario no encontrado</string>
    <string name="profile_no_podcasts">Este usuario a\u00fan no tiene podcasts</string>
    <string name="user_profile_title">Perfil</string>
</resources>
