<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/inicioFragment">

    <fragment
        android:id="@+id/inicioFragment"
        android:name="com.example.audify.ui.inicio.InicioFragment"
        android:label="@string/bottom_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/podcastsFragment"
        android:name="com.example.audify.ui.podcasts.PodcastsFragment"
        android:label="@string/bottom_podcasts"
        tools:layout="@layout/fragment_podcasts" />

    <fragment
        android:id="@+id/uploadFragment"
        android:name="com.example.audify.ui.upload.UploadFragment"
        android:label="@string/bottom_upload"
        tools:layout="@layout/fragment_upload" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.audify.ui.profile.ProfileFragment"
        android:label="@string/bottom_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/listsFragment"
        android:name="com.example.audify.ui.lists.ListsFragment"
        android:label="@string/drawer_listas"
        tools:layout="@layout/fragment_lists" />

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.example.audify.ui.favorites.FavoritesFragment"
        android:label="@string/drawer_favoritos"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.audify.ui.detail.DetailFragment"
        android:label="@string/detail_title"
        tools:layout="@layout/fragment_detail">

        <argument
            android:name="podcastId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/userProfileFragment"
        android:name="com.example.audify.ui.profile.UserProfileFragment"
        android:label="Perfil"
        tools:layout="@layout/fragment_user_profile">

        <argument
            android:name="userId"
            app:argType="string" />
    </fragment>

</navigation>
